--- a/ArcGISWinForm/CustomControls/CustomControls.csproj
+++ b/ArcGISWinForm/CustomControls/CustomControls.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Custom_ColorRampCombobox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="HiddenCheckBoxTreeNode.cs" />
+    <Compile Include="MixedCheckBoxesTreeView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ucColorRampSelector.cs">
       <SubType>UserControl</SubType>
