添加了字体选择combobox

--- a/ArcGISWinForm/ArcGISWinForm/app.config
+++ b/ArcGISWinForm/ArcGISWinForm/app.config
@@ -3,5 +3,6 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
   <appSettings>
     <add key="ESRI.ServerStyle" value="template/ESRI.ServerStyle" />
+    <add key="Custom_FontFamilyCombobox" value="image\Custom_FontFamilyCombobox"/>
   </appSettings>
 </configuration>
