--- a/ArcGISWinForm/CustomControls/CustomControls.csproj
+++ b/ArcGISWinForm/CustomControls/CustomControls.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -42,7 +42,10 @@
     <Reference Include="ESRI.ArcGIS.System, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=x86">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="SeanShen.CustomControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="SeanShen.DotNetUtilities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\bin\Debug\SeanShen.DotNetUtilities.dll</HintPath>
+    </Reference>
     <Reference Include="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
@@ -60,8 +63,11 @@
     <Compile Include="Custom_ColorRampCombobox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="HiddenCheckBoxTreeNode.cs" />
-    <Compile Include="MixedCheckBoxesTreeView.cs">
+    <Compile Include="Custom_FontFamilyCombobox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Custom_HiddenCheckBoxTreeNode.cs" />
+    <Compile Include="Custom_MixedCheckBoxesTreeView.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
