--- a/ArcGISWinForm/CustomControls/CustomControls.csproj
+++ b/ArcGISWinForm/CustomControls/CustomControls.csproj
@@ -32,22 +32,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ESRI.ArcGIS.AxControls, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=x86" />
-    <Reference Include="ESRI.ArcGIS.Controls, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=x86">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="ESRI.ArcGIS.Display, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=x86">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="ESRI.ArcGIS.System, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=x86">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="SeanShen.DotNetUtilities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ESRI.ArcGIS.AxControls, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL" />
+    <Reference Include="ESRI.ArcGIS.Controls, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\bin\Debug\SeanShen.DotNetUtilities.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="ESRI.ArcGIS.Display, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -60,28 +55,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Custom_ColorRampCombobox.cs">
+    <Compile Include="arcgis颜色带选择器colorramp\Custom_ColorRampCombobox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Custom_FontFamilyCombobox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Custom_HiddenCheckBoxTreeNode.cs" />
-    <Compile Include="Custom_MixedCheckBoxesTreeView.cs">
+    <Compile Include="arcgis颜色带选择器colorramp\sample.cs" />
+    <Compile Include="每个节点是否有checkbox的treeview\Custom_HiddenCheckBoxTreeNode.cs" />
+    <Compile Include="每个节点是否有checkbox的treeview\Custom_MixedCheckBoxesTreeView.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ucColorRampSelector.cs">
+    <Compile Include="arcgis颜色带选择器colorramp\ucColorRampSelector.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ucColorRampSelector.Designer.cs">
+    <Compile Include="arcgis颜色带选择器colorramp\ucColorRampSelector.Designer.cs">
       <DependentUpon>ucColorRampSelector.cs</DependentUpon>
     </Compile>
+    <Compile Include="每个节点是否有checkbox的treeview\sample.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ucColorRampSelector.resx">
+    <EmbeddedResource Include="arcgis颜色带选择器colorramp\ucColorRampSelector.resx">
       <DependentUpon>ucColorRampSelector.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotNetUtilities\DotNetUtilities.csproj">
+      <Project>{88191AA4-E33E-4505-A6E2-CC470B6D8CD2}</Project>
+      <Name>DotNetUtilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
