--- a/ArcGISWinForm/Framework/Framework.csproj
+++ b/ArcGISWinForm/Framework/Framework.csproj
@@ -5,14 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{88191AA4-E33E-4505-A6E2-CC470B6D8CD2}</ProjectGuid>
+    <ProjectGuid>{D4C6E4FE-EED6-4AFD-9889-056A5AF676ED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SeanShen.DotNetUtilities</RootNamespace>
-    <AssemblyName>SeanShen.DotNetUtilities</AssemblyName>
+    <RootNamespace>SeanShen.Framework</RootNamespace>
+    <AssemblyName>SeanShen.Framework</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,29 +32,45 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ESRI.ArcGIS.Geoprocessing, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="ESRI.ArcGIS.Geoprocessor, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+    <Reference Include="ESRI.ArcGIS.ADF.Local, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="ESRI.ArcGIS.System, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+    <Reference Include="ESRI.ArcGIS.Controls, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="ESRI.ArcGIS.SystemUI, Version=10.2.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="python\PythonHelper.cs" />
-    <Compile Include="python\PythonPath.cs" />
-    <Compile Include="RegexHelper.cs" />
+    <Compile Include="enum\enumResourceType.cs" />
+    <Compile Include="ISeanMapControlView.cs" />
+    <Compile Include="ISeanDockWindow.cs" />
+    <Compile Include="ISeanEnvironment.cs" />
+    <Compile Include="ISeanEventManager.cs" />
+    <Compile Include="ISeanLayoutManager.cs" />
+    <Compile Include="ISeanMachine.cs" />
+    <Compile Include="ISeanPagelayoutView.cs" />
+    <Compile Include="ISeanTocWindow.cs" />
+    <Compile Include="ISeanApplication.cs" />
+    <Compile Include="ISeanCommand.cs" />
+    <Compile Include="ISeanResource.cs" />
+    <Compile Include="ISeanTool.cs" />
+    <Compile Include="ISeanUser.cs" />
+    <Compile Include="ISeanView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeanBaseCommand.cs" />
+    <Compile Include="SeanBaseTool.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
