--- a/ArcGISWinForm/Framework/Framework.csproj
+++ b/ArcGISWinForm/Framework/Framework.csproj
@@ -54,24 +54,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="enum\enumResourceType.cs" />
-    <Compile Include="ISeanMapControlView.cs" />
-    <Compile Include="ISeanDockWindow.cs" />
-    <Compile Include="ISeanEnvironment.cs" />
-    <Compile Include="ISeanEventManager.cs" />
-    <Compile Include="ISeanLayoutManager.cs" />
-    <Compile Include="ISeanMachine.cs" />
-    <Compile Include="ISeanPagelayoutView.cs" />
-    <Compile Include="ISeanTocWindow.cs" />
-    <Compile Include="ISeanApplication.cs" />
-    <Compile Include="ISeanCommand.cs" />
-    <Compile Include="ISeanResource.cs" />
-    <Compile Include="ISeanTool.cs" />
-    <Compile Include="ISeanUser.cs" />
-    <Compile Include="ISeanView.cs" />
+    <Compile Include="功能接口\视图\ISeanMapControlView.cs" />
+    <Compile Include="功能接口\视图\ISeanDockWindow.cs" />
+    <Compile Include="功能接口\视图\IStatusBar.cs" />
+    <Compile Include="单独接口\ISeanEnvironment.cs" />
+    <Compile Include="单独接口\ISeanEventManager.cs" />
+    <Compile Include="单独接口\ISeanLayoutManager.cs" />
+    <Compile Include="功能接口\用户与机器\ISeanMachine.cs" />
+    <Compile Include="功能接口\视图\ISeanPagelayoutView.cs" />
+    <Compile Include="功能接口\视图\ISeanTocWindow.cs" />
+    <Compile Include="单独接口\ISeanApplication.cs" />
+    <Compile Include="功能接口\command\ISeanCommand.cs" />
+    <Compile Include="功能接口\ISeanResource.cs" />
+    <Compile Include="功能接口\command\ISeanTool.cs" />
+    <Compile Include="功能接口\用户与机器\ISeanUser.cs" />
+    <Compile Include="功能接口\视图\ISeanView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeanBaseCommand.cs" />
     <Compile Include="SeanBaseTool.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
