--- a/ArcGISWinForm/Framework/Framework.csproj
+++ b/ArcGISWinForm/Framework/Framework.csproj
@@ -67,13 +67,13 @@
     <Compile Include="功能接口\视图\ISeanMapControlView.cs" />
     <Compile Include="功能接口\视图\ISeanDockWindow.cs" />
     <Compile Include="功能接口\视图\ISeanStatusBar.cs" />
-    <Compile Include="单独接口\ISeanEnvironment.cs" />
-    <Compile Include="单独接口\ISeanEventManager.cs" />
-    <Compile Include="单独接口\ISeanLayoutManager.cs" />
+    <Compile Include="ISeanEnvironment.cs" />
+    <Compile Include="管理控制器\ISeanEventManager.cs" />
+    <Compile Include="管理控制器\ISeanLayoutManager.cs" />
     <Compile Include="用户与机器\ISeanMachine.cs" />
     <Compile Include="功能接口\视图\ISeanPagelayoutView.cs" />
     <Compile Include="功能接口\视图\ISeanTocWindow.cs" />
-    <Compile Include="单独接口\ISeanApplication.cs" />
+    <Compile Include="ISeanApplication.cs" />
     <Compile Include="功能接口\command\ISeanCommand.cs" />
     <Compile Include="功能接口\ISeanResource.cs" />
     <Compile Include="功能接口\command\ISeanTool.cs" />
@@ -82,6 +82,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeanBaseCommand.cs" />
     <Compile Include="SeanBaseTool.cs" />
+    <Compile Include="管理控制器\ISeanCommandManager.cs" />
     <Compile Include="管理控制器\ISeanContextMenuManager.cs" />
   </ItemGroup>
   <ItemGroup>
