继续完善结构，并基本完成布局功能

--- a/ArcGISWinForm/DotNetUtilities/DotNetUtilities.csproj
+++ b/ArcGISWinForm/DotNetUtilities/DotNetUtilities.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogHelper.cs" />
     <Compile Include="python\PythonHelper.cs" />
     <Compile Include="python\PythonPath.cs" />
     <Compile Include="RegexHelper.cs" />
