--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ build/
 [Oo]bj/
 [Ll]og/
 [Ll]og.txt
+licenses.licx
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
