解决了，baritem的点击问题，但是这里的小按钮和大按钮的点击响应逻辑是不一样的~

--- a/ArcGISWinForm/AEUtilities/AEUtilities.csproj
+++ b/ArcGISWinForm/AEUtilities/AEUtilities.csproj
@@ -92,6 +92,7 @@
     <Compile Include="MapHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RGBColorHelper.cs" />
+    <Compile Include="WorkspaceHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotNetUtilities\DotNetUtilities.csproj">
