--- a/ArcGISWinForm/AOFileManageCommand/AOFileManageCommand.csproj
+++ b/ArcGISWinForm/AOFileManageCommand/AOFileManageCommand.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\AddDataCommand.cs" />
+    <Compile Include="Command\SaveAsDocCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
